fixed color contrast error at article in hero

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -106,7 +106,7 @@ header nav a {
     bottom: 20px;
     left: 16px;
     background-color: var(--accent2-color);
-    color: #fff;
+    color: #000000;
     padding: 8px;
 }
 
